change the post

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <script type="module" src="./lite_framework/main.js"></script>
+    <div id="root">
+         <!-- the root of the frame work everything will be added here -->
+    </div>
 </body>
 </html>
