--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script type="module" src="./lite_framework/main.js"></script>
+    <link rel="stylesheet" href="./lite_framework/notfound.css">
     <div id="root">
          <!-- the root of the frame work everything will be added here -->
     </div>
