--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="./lite_framework/main.js"></script>
+    <script type="module" src="./main.js"></script>
     <link rel="stylesheet" href="./lite_framework/notfound.css">
     <div id="root">
          <!-- the root of the frame work everything will be added here -->
